# CppSmartCalc

./: .gitignore  CMakeLists.txt  README.md
src/: Doxyfile  Makefile  SmartCalc2  main.cc  rules.pro  title.md
src/controller/: CreditController.cc  CreditController.h  EvaluationController.cc  EvaluationController.h  GraphController.cc  GraphController.h
src/model/: CreditModel.cc  CreditModel.h  EvaluationModel.cc  EvaluationModel.h  GraphModel.cc  GraphModel.h  PolishEvaluation.cpp  PolishEvaluation.h  utils.cc  utils.h
src/tests/: calculation_suite.cc  credit_calculation_suite.cc  parsing_suite.cc  parsing_suite.cpp  polish_notation_suite.cc  tests_main.cpp
src/ui/: credit.ui  deposit.ui  graph.ui  interface.ui  interface.ui~  styles.css
src/view/: CreditView.cc  CreditView.h  DepositView.cc  DepositView.h  GraphView.cc  GraphView.h  MainWindow.cc  MainWindow.h
